hphp/test/zend/good/tests/classes/interface_and_extends.php.expectf

Fatal error: Class Tester may not inherit from interface (Test) in %s/interface_and_extends.php on line 8
